Add a description of the chicken parm recipe

--- a/recipes/chicken-parm.html
+++ b/recipes/chicken-parm.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Chicken Parm</h1>
     <img src="../images/chicken-parm.jpg">
+    <h2>Description</h2>
+    <p>Are we even surprised? By now we already know the air fryer is supreme. The fact that crispy golden chicken can be achieved without the use of any oil whatsoever is amazing and that's not to mention how quickly the air fryer can do it! There's no need to turn on your oven or make a whole oily mess on your stovetop: This chicken parm tastes every bit as good as the traditional version with much less effort to get there.</p>
+
+    <p>The air fryer will even melt and broil your cheese for a perfectly cheesy, crispy bite! Just 10 minutes to cook and 3 minutes more to toast the cheese and you will never look back. This recipe is a time- and energy-saver, especially if it's hot out.</p>
 </body>
 </html>
