Add steps as an ordered list

--- a/recipes/chicken-parm.html
+++ b/recipes/chicken-parm.html
@@ -28,5 +28,13 @@
 <li>1 c. shredded mozzarella</li>
 <li>Freshly chopped parsley, for garnish</li>
 </ul>
+<h3>Steps</h3>
+<ol>
+    <li>Carefully butterfly chicken by cutting in half widthwise all the way through to create 4 thin pieces of chicken; season both sides with salt and black pepper.</li>
+    <li>Place flour in a shallow bowl; season with a large pinch of salt and a few grinds of black pepper. In another shallow bowl, beat eggs to blend. In a third shallow bowl, combine panko, Parmesan, oregano, red pepper flakes, and garlic powder.</li>
+    <li>Working one at a time, coat chicken in flour, shaking off any excess. Dip into eggs, letting excess drip off, then finally dip into panko mixture, gently pressing to adhere and ensuring both sides of chicken are well coated.</li>
+    <li>Working in batches if necessary, in an air-fryer basket, arrange chicken in a single layer. Cook at 400°, turning once, for 5 minutes per side. Top chicken with marinara and mozzarella. Continue to cook at 400° until cheese is melted and golden, about 3 minutes more.</li>
+    <li>Divide chicken among plates. Garnish with parsley.</li>
+</ol>
 </body>
 </html>
