Add description of Doritos casserole

--- a/recipes/doritos-casserole.html
+++ b/recipes/doritos-casserole.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Doritos Casserole</h1>
     <img src="./images/Dorito-Casserole-RC-SQ.jpg" alt="Photo of Doritos casserole">
+    <h2>Description</h2>
+    <p>With layers of crunchy nacho cheese chips, ground beef, onion, bell peppers, beans, and loads of cheese, this taco bake is hard to resist.</p>
+    <p>Dorito casserole has all the fixings similar to what you'd stuff a taco with plus the addition of crushed chips. With layers of crunchy nacho cheese chips, ground beef, onion, bell peppers, beans, and loads of cheese, this taco bake is hard to resist. It's easily customizable to suit your taste, so have fun with the ingredients on this one!</p>
 </body>
 </html>
