Add list of ingredients

--- a/recipes/doritos-casserole.html
+++ b/recipes/doritos-casserole.html
@@ -11,5 +11,18 @@
     <h2>Description</h2>
     <p>With layers of crunchy nacho cheese chips, ground beef, onion, bell peppers, beans, and loads of cheese, this taco bake is hard to resist.</p>
     <p>Dorito casserole has all the fixings similar to what you'd stuff a taco with plus the addition of crushed chips. With layers of crunchy nacho cheese chips, ground beef, onion, bell peppers, beans, and loads of cheese, this taco bake is hard to resist. It's easily customizable to suit your taste, so have fun with the ingredients on this one!</p>
+    <ul>
+        <li>10 oz nacho cheese Doritos or regular tortilla chips</li>
+        <li>1 lb ground beef</li>
+        <li>1/2 medium yellow onion about 1 cup, diced</li>
+        <li>1 green bell pepper diced</li>
+        <li>1/4 cup taco seasoning</li>
+        <li>1/2 cup water</li>
+        <li>10 oz can Rotel tomatoes drained</li>
+        <li>1 cup sour cream plus more for serving</li>
+        <li>1 cup black beans drained and rinsed</li>
+        <li>4 cups shredded medium cheddar cheese</li>
+        <li>1 red bell pepper diced</li>
+    </ul>
 </body>
 </html>
