Add recipe steps

--- a/recipes/doritos-casserole.html
+++ b/recipes/doritos-casserole.html
@@ -24,5 +24,25 @@
         <li>4 cups shredded medium cheddar cheese</li>
         <li>1 red bell pepper diced</li>
     </ul>
+    <ol>
+        <li>Grease a 9x13 casserole dish with non-stick cooking spray. Preheat the oven to 350 degrees Fahrenheit.</li>
+        <li>Crush chips lightly and sprinkle approximately 1 cup across the bottom of the baking dish.</li>
+        <li>Cook ground beef in a large skillet over medium heat until mostly browned. Add diced onion and diced bell pepper and saute about 5 minutes longer, until vegetables begin to soften.</li>
+        <li>Add taco seasoning and water and stir to combine. Bring mixture to a simmer and cook for 5 minutes longer, stirring regularly.</li>
+        <li>Add the Rotel and sour cream to the meat mixture and stir to combine completely.</li>
+        <li>Gently mix the black beans into the skillet.
+        </li>
+        <li>Spread half of the meat mixture over the crushed chips in the casserole dish.
+        </li>
+        <li>Place another layer of crushed chips over the meat. Spread half of the cheese over the chips.
+        </li>
+        <li>Repeat to layer the remaining meat, chips, and cheese.
+        </li>
+        <li>Cover with aluminum foil and bake for approximately 20 minutes, until the cheese is melted and the casserole is hot and bubbly.
+        </li>
+        <li>Garnish with diced bell peppers and/or chopped cilantro, tomatoes, avocado, etc. Serve with additional sour cream.
+        </li>
+
+    </ol>
 </body>
 </html>
