--- a/recipes/tonkotsu-ramen.html
+++ b/recipes/tonkotsu-ramen.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Tonkotsu Ramen</h1>
+    <img src="../images/tonkotsuramenfront.jpg" alt="Photo of a bowl of tonkotsu ramen soup">
 </body>
 </html>
