Add ingredients for tonkatsu ramen

--- a/recipes/tonkotsu-ramen.html
+++ b/recipes/tonkotsu-ramen.html
@@ -11,5 +11,40 @@
     <h2>Description</h2>
     <p>Making tonkotsu ramen at home is truly a labour of love. This isn't some 15 minute miracle insta-ramen recipe. This isn't even some one day recipe.</p>
     <p>Making authentic tonkotsu ramen takes time. It takes effort. You have to be a bit crazy to go there. But it's so good. It's totally worth it.</p>
+    <h2>Ingredients</h2>
+    <h3>Tonkotsu Ramen</h3>
+    <ul>
+        <li>8 cups tonkotsu pork broth</li>
+        <li>12 oz good quality dried ramen noodles</li>
+        <li>4 large or extra large eggs</li>
+        <li>2-3 oz enoki or other mushrooms</li>
+        <li>thinly sliced green onions</li>
+    </ul>
+        <h3>Chashu pork belly</h3>
+    <ul>
+        <li>2 lb pork belly - rolled and tied</li>
+        <li>1/4 cup soy sauce</li>
+       <li>1/2 cup sake</li>
+        <li>1/2 cup mirin - sweet Japanese wine</li>
+        <li>1/4 cup sugar</li>
+        <li>2-3 cloves garlic - left whole</li>
+        <li>2 green onions - coarsely chopped</li>
+    </ul>
+        <h3>Soy bacon tare</h3>
+    <ul>
+        <li>2 slices bacon</li>
+        <li>1/4 cup soy sauce</li>
+        <li>2 Tbsp mirin</li>
+        <li>2 Tbsp sake</li>
+        <li>4 Tbsp shiro miso</li>
+    </ul>
+        <h3>Miso Tare</h3>
+    <ul>
+        <li>1/2 cup shiro miso</li>
+        <li>1/4 cup sake</li>
+        <li>1/4 cup mirin</li>
+        <li>pinch shichimi togarashi (optional)</li>
+        <li>1-2 tsp kosher salt - depending on how salty you like your ramen</li>
+    </ul>
 </body>
 </html>
