--- a/recipes/tonkotsu-ramen.html
+++ b/recipes/tonkotsu-ramen.html
@@ -46,5 +46,40 @@
         <li>pinch shichimi togarashi (optional)</li>
         <li>1-2 tsp kosher salt - depending on how salty you like your ramen</li>
     </ul>
+    <h2>Steps</h2>
+    <h3>Chashu Pork Belly</h3>
+    <ol>
+        <li>Combine the soy, sake, mirin, sugar, garlic and green onions in a ziploc bag large enough to hold the pork belly. Stick a straw in the bag and seal the ziploc bag up against it (so the straw is the only opening). Suck as much of the air out as you can and seal.</li>
+        <li>Sous vide the pork for 10-11 hours at 170F.</li>
+        <li>Remove pork from the ziploc bag. Discard the bag and marinade.</li>
+        <li>Let the chashu pork belly cool completely.</li>
+        <li>Slice across the chashu pork (so you get bacon like slices) – into 8-12 slices about 1/8 to 3/16 inches thick. Reserve. You won’t need all the pork for 4 servings.</li>
+    </ol>
+    <h3>Soy bacon tare</h3>
+    <ol>
+        <li>Combine all the ingredients in a small sauce pan. Simmer at the lowest setting for about an hour. Top up with a bit of chicken stock if needed.</li>
+        <li>Remove the bacon.
+        </li>
+    </ol>
+    <h3>Miso tare</h3>
+    <ol>
+        <li>Combine all ingredients in a small sauce pan and simmer at the lowest setting for about 5 minutes.</li>
+    </ol>
+    <h3>Medium boiled eggs</h3>
+    <ol>
+        <li>Bring enough water to cover the eggs to a boil. If you have a way to prick the eggshell do it. Boil large eggs for 6 minutes 30 seconds. If using extra large eggs boil them for 7 minutes 30 seconds. You may have to adjust your times slightly depending on the exact size of your eggs but this should get you pretty close.</li>
+        <li>Submerge the eggs in cold or ice water to chill. This stops the egg yolks from continuing to set up. Peel. Cut in half right before you serve your tonkotsu ramen.
+        </li>
+    </ol>
+    <h3>Assemble the tonkatsu ramen</h3>
+    <ol>
+        <li>Boil the ramen noodles in plenty of water as directed by the packaging. If there's no translation on the packaging usually its 4 minutes. You don't need to salt the water.</li>
+        <li>Cook the mushrooms along side the noodles - you just want them softened.</li>
+        <li>Gently fry the chashu pork in a non-stick skillet until lightly browned.</li>
+        <li>Place 1/4 of whichever tare you are using in the bottom of four bowls.</li>
+        <li>Ladle in about 1/2 cup of the tonkotsu broth into each of the bowls and stir to mix.</li>
+        <li>Add the noodles. Pour in another 1 1/2 cups of the tonkotsu broth per bowl.</li>
+        <li>Top with the egg, mushrooms, pork and green onions.</li>
+    </ol>
 </body>
 </html>
