--- a/recipes/tonkotsu-ramen.html
+++ b/recipes/tonkotsu-ramen.html
@@ -9,7 +9,7 @@
     <h1>Tonkotsu Ramen</h1>
     <img src="../images/tonkotsuramenfront.jpg" alt="Photo of a bowl of tonkotsu ramen soup">
     <h2>Description</h2>
-    <p>Making tonkotsu ramen at home is truly a labour of love. This isn't some 15 minute miracle insta-ramen recipe. This isn't even some one day recipe.</p>
+    <p>Tonkotsu ramen is an excellent introduction to Japanese noodle soups. Deeply flavoured tonkotsu pork broth, ramen noodles and chashu pork belly come together to create comfort in a bowl.</p>
     <p>Making authentic tonkotsu ramen takes time. It takes effort. You have to be a bit crazy to go there. But it's so good. It's totally worth it.</p>
     <h2>Ingredients</h2>
     <h3>Tonkotsu Ramen</h3>
