Add notes section to clarify recipe
Needed to clarify that there are two different tare
recipes, only one should be used.

--- a/recipes/tonkotsu-ramen.html
+++ b/recipes/tonkotsu-ramen.html
@@ -81,5 +81,10 @@
         <li>Add the noodles. Pour in another 1 1/2 cups of the tonkotsu broth per bowl.</li>
         <li>Top with the egg, mushrooms, pork and green onions.</li>
     </ol>
+    <h2>Notes</h2>
+    <p>I've provided 2 different tare recipes. Use one or the other or come up with your own.</p>
+    <p>If you use the miso tare, you can salt your broth directly. That is easier than guessing how salty you want your tare.</p>
+    <p>If you aren't up for making chashu pork you can substitute roasted pork shoulder. It would be an awesome use of leftover pork roast...</p>
+    
 </body>
 </html>
