--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-parm.html">Chicken Parm</a>
-    <a href="recipes/doritos-casserole.html">Doritos Casserole</a>
-    <a href="recipes/tonkotsu-ramen.html">Tonkotsu Ramen</a>
+    <ul>
+        <li><a href="recipes/chicken-parm.html">Chicken Parm</a></li>
+        <li><a href="recipes/doritos-casserole.html">Doritos Casserole</a></li>
+        <li><a href="recipes/tonkotsu-ramen.html">Tonkotsu Ramen</a></li>
+    </ul>
+    
 </body>
 </html>
